# senrah

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  alembic.ini  docker-compose.yml  harness.yaml  harness.yaml.example  pyproject.toml  senrah.yaml.example
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_repo_op_state.py  0003_ingest_errors.py
docs/: EVAL.md  PRODUCTION-READINESS.md  QUAL-AUDIT.md
eval/ab/: PROTOCOL.md  RESULTS.md  score.py
eval/cluster/: build_clusters.py  clusters-deep.json  clusters.json  detector.py  grouping.py  refetch.py  unionfind.py
eval/judge/: calibration_results.json  gold.jsonl  judge.py  kappa.py
eval/knownitem/: build_manifest.py  build_triage_v3.py  generate_v3_manifest.py  manifest-v3.json  manifest.json  results-baseline-250.json  results-deep-487.json  results-v2-487-plus-httpx.json  results-v2-487.json  results-v2-575-reindexed.json  results-v3-deduped.json  run_eval.py  triage-v3.json  triage-v3.md
eval/temporal/: bootstrap_ci.py  define_split.py  run_temporal_eval.py
paper/: README.md  main.tex  references.bib
site/: CNAME  DEPLOY.md  index.html
src/harness/: config.py  scoring.py  search_log.py
src/senrah/: __init__.py  config.py  scoring.py  search_log.py
tests/: conftest.py
tests/integration/: conftest.py  test_clusters_artifact.py  test_end_to_end.py  test_indexer.py  test_manifest_v3.py  test_mcp_e2e.py  test_migration_0002.py  test_migrations.py  test_pr_repo.py  test_resume.py  test_skill_repo.py  test_skill_repo_window.py  test_triage.py
tests/unit/: test_bootstrap_ci.py  test_connector_isolation.py  test_connector_traversal.py  test_detector.py  test_diff_files.py  test_diff_normalize.py  test_diff_retry.py  test_embedder.py  test_filters.py  test_github_connector.py  test_grouping.py  test_ingest_filtering.py  test_ingest_isolation.py  test_init_cmd.py  test_judge_isolation.py  test_kappa.py  test_mcp_schema.py  test_mcp_tool.py  test_reindex.py  test_repos_cmd.py  test_scope.py  test_scoring.py  test_secrets_hygiene.py  test_skill_repo_rerank.py  test_skill_repo_search_window.py  test_status_and_log.py  test_temporal_split.py  test_throttle.py  test_traversal_incremental.py  test_unionfind.py  test_validate_creds.py  (+1 more)
(+141 files in other folders)
