[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senrah"
version = "1.1.0"
description = "Semantic PR search for AI coding agents — ingest, index, and retrieve merged-PR precedents via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg[binary,pool]>=3.3.4,<4",
    "pgvector>=0.4.2,<1",
    "alembic>=1.18.4,<2",
    "openai>=2.38.0,<3",
    "tiktoken>=0.13.0,<1",
    "PyGithub>=2.9.1,<3",
    "httpx>=0.28.1,<1",
    "typer>=0.26.4,<1",
    "pydantic-settings>=2.14.1,<3",
    "pyyaml>=6,<7",
    "tenacity>=9.1.4,<10",
    "mcp>=1.27.2,<2",
    # Comment-preserving round-trip YAML writer for `senrah init` (OPS-01).
    # Read path stays on yaml.safe_load; ruamel is used only on the init write
    # path. Legitimacy checkpoint passed 2026-06-12 (T-03-SC): PyPI ruamel.yaml,
    # author Anthon van der Neut, 273 releases since 2014, round-trip tests
    # green on 0.19.1.
    "ruamel.yaml>=0.18,<0.20",
]

[project.urls]
Homepage = "https://github.com/ivanovresearch/senrah"
Repository = "https://github.com/ivanovresearch/senrah"
Changelog = "https://github.com/ivanovresearch/senrah/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.4.0,<2",
    "respx>=0.23.1,<1",
    "testcontainers[postgres]>=4.14.2,<5",
    "ruff",
    "mypy",
]
# Eval harness extra -- NOT in runtime dependencies or dev.
# Install with: pip install senrah[eval]
# Keeps 'pip install senrah' LLM-free (D-17, JUDGE-01).
# Legitimacy checkpoint: anthropic is the official Anthropic SDK, first-party,
# published at PyPI by Anthropic PBC (T-09-SC).
eval = [
    "anthropic>=0.111.0,<1",
    "numpy>=2,<3",
]

[project.scripts]
senrah = "senrah.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
